@startuml

title __RECURSIVEGENERIC's Class Diagram__\n

  namespace builder.examples.recursiveGeneric {
    class builder.examples.recursiveGeneric.EmployeeBuilder {
        + worksAs()
        # self()
    }
  }
  

  namespace builder.examples.recursiveGeneric {
    class builder.examples.recursiveGeneric.Person {
        + name : String
        + position : String
        + toString()
    }
  }
  

  namespace builder.examples.recursiveGeneric {
    class builder.examples.recursiveGeneric.PersonBuilder {
        + build()
        + withName()
        # self()
    }
  }
  

  builder.examples.recursiveGeneric.EmployeeBuilder -up-|> builder.examples.recursiveGeneric.PersonBuilder
  builder.examples.recursiveGeneric.PersonBuilder o-- builder.examples.recursiveGeneric.Person : person


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
